# nextpilot

./: .gitignore  README.md  copy_train_data.sh  dataset.py  gpu_setup.sh  inference.py  install_python_h.sh  install_uv.sh  model.py  preprocess.py  preprocessing.py  pyproject.toml  ssh.sh  tokenizer.py  train.py  training.py  util.py
src/: inference.py  model.py  preprocessing.py  tokenizer.py  training.py  util.py
