[project]
name = "nextpilot"
version = "0.1.0"
description = "A tiny distilled model for generating nextjs code"
readme = "README.md"
python = "3.10"
requires-python = "==3.10.*"
dependencies = [
    "accelerate>=1.4.0",
    "bitsandbytes; sys_platform == 'linux'",
    "ffmpeg-python>=0.2.0",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pyannote-audio>=3.3.2",
    "pytubefix>=8.12.2",
    "requests>=2.32.3",
    "termcolor>=2.5.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "wandb>=0.19.8",
]
